--- a/spark_apps/log4j.properties
+++ b/spark_apps/log4j.properties
@@ -1,5 +1,5 @@
 # filepath: /opt/spark/conf/log4j.properties
-log4j.rootCategory=ERROR
+log4j.rootCategory=ERROR, console
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.target=System.err
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
