--- a/airflow/docker-compose.yml
+++ b/airflow/docker-compose.yml
@@ -14,6 +14,10 @@ x-airflow-common:
     AIRFLOW__CORE__LOAD_EXAMPLES: 'false'
     AIRFLOW__API__AUTH_BACKENDS: 'airflow.api.auth.backend.basic_auth,airflow.api.auth.backend.session'
     AIRFLOW__SCHEDULER__ENABLE_HEALTH_CHECK: 'true'
+    AIRFLOW__WEBSERVER__ENABLE_CORS: 'true'
+    AIRFLOW__WEBSERVER__CORS_ORIGINS: 'http://localhost:5173'
+    AIRFLOW__WEBSERVER__CSRF_ENABLED: 'false'
+    AIRFLOW__WEBSERVER__X_FRAME_ENABLED: 'false'
     _PIP_ADDITIONAL_REQUIREMENTS: ${_PIP_ADDITIONAL_REQUIREMENTS:-}
     DOCKER_HOST: tcp://host.docker.internal:2375  # Allows access to Docker from inside Airflow
   volumes:
@@ -65,6 +69,8 @@ services:
     restart: always
     depends_on:
       <<: *airflow-common-depends-on
+    volumes:
+      - ${AIRFLOW_PROJ_DIR:-.}/webserver_config.py:/opt/airflow/webserver_config.py
 
   airflow-scheduler:
     <<: *airflow-common
